+ Possibility to run Selenium tests from ant + Added a newline to insert-users.sql which was preventing the sync-dbs script
git-svn-id: http://agilefant.googlecode.com/svn/trunk@4243 29784df9-99d5-7e28-3e6c-ac1830307ffc